# simplon-stub

./: .gitlab-ci.yml  README.md  alpinehdf5.pc  flake.nix  hie.yaml  simplon-stub-hs.cabal
.github/workflows/: build-with-nix.yaml
app/: Hdf5.hs  Hdf5Raw.hsc  Main.hs
app/Simplon/: EigerParameterNameValue.hs  EigerParameterValue.hs  Hdf5.hs  Hdf5Raw.hsc  Options.hs  SeriesId.hs  Streaming.hs  Util.hs
ci/: build-on-alpine.sh
