cabal-version:  3.4
name:           simplon-stub-hs
version:        1.0.0
description:    Please see the README on GitHub at <https://github.com/pmiddend/simplon-stub-hs#readme>
homepage:       https://github.com/pmiddend/simplon-stub-hs#readme
bug-reports:    https://github.com/pmiddend/simplon-stub-hs/issues
author:         Philipp Middendorf
maintainer:     pmidden@mailbox.org
copyright:      2024 Philipp Middendorf
license:        GPL-3.0-or-later
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.org

source-repository head
  type: git
  location: https://github.com/pmiddend/simplon-stub-hs

executable simplon-stub
  main-is: Main.hs
  ghc-options: -Weverything -Wno-missing-safe-haskell-mode -Wno-unsafe -Wno-missing-deriving-strategies -Wno-all-missed-specialisations -Wno-monomorphism-restriction -Wno-safe -Wno-missing-local-signatures -Wno-prepositive-qualified-module -threaded -rtsopts -with-rtsopts=-N -Wno-missing-kind-signatures -Wno-missed-specializations
  other-modules: Simplon.Hdf5Raw
               , Simplon.Hdf5
               , Simplon.Options
               , Simplon.Streaming
  hs-source-dirs:
      app
  build-depends:
      base >=4.7 && <5
    , scotty
    , text
    , containers
    -- for HTTP status codes
    , http-types
    -- both Simplon HTTP and ZMQ need this
    , aeson
    -- simplon ZMQ streaming interface
    , zeromq4-haskell
    -- to calculate MD5 hashes in streaming interface
    , crypton
    , fast-logger
    , bytestring
    , optparse-applicative
    -- for request logging
    , wai-extra
    , stm

  pkgconfig-depends: hdf5
